# git_training_wheels

./: .coveragerc  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TODO.md  ez_setup.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml
git_training_wheels/: __init__.py  _version.py
tests/: test_git_training_wheels.py
