[metadata]
name = git_training_wheels
version = attr:git_training_wheels.__version__
description = Get to know git from the CLI!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mariospar/git_training_wheels
author = Marios Paraskevas
author_email = mariosparaskevas00@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Software Development :: Version Control :: Git
keywords = git git-training-wheels git-tutorial
platform = any
project_urls =
    Bug Tracker = https://github.com/mariospar/git_training_wheels/issues
    Changelog = https://github.com/mariospar/git_training_wheels/blob/master/CHANGELOG.md

[options]
packages = git_training_wheels
python_requires = >=3.8
include_package_data = true
setup_requires =
    black
    commitizen
    flake8
    isort
    mypy
    pre-commit
    pylint
    setuptools
test_suite = tests
tests_require =
    coverage
    pytest
    pytest-cov
    tox
zip_safe = false

[options.entry_points]
console_scripts =
    git_training_wheels = git_training_wheels.cli:main

[options.package_data]
git_training_wheels = py.typed, _version.txt, *.pyi

[flake8]
ignore = E501
doctests = True
extend-ignore = E203
max-line-length = 99
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
python_version = 3.10
plugins = pydantic.mypy
pretty = True
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_reexport = True
strict_optional = True
show_error_codes = True
show_error_context = True
warn_return_any = True
warn_unused_ignores = True
warn_redundant_casts = True

[pydantic-mypy]
init_typed = True
init_forbid_extra = True
warn_untyped_fields = True
warn_required_dynamic_aliases = True

[mypy-tests.*]
ignore_errors = True

[aliases]
test = pytest

[pydocstyle]
inherit = false
ignore = D100,D203,D405
match = .*\.py
